fixing picture position mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -312,12 +312,10 @@ a:hover{
 
     img {
         object-fit: cover;
-        object-position: 0 25%;
         width: 100%;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 0;
-        vertical-align: middle;
+        margin-top: -55px;
     }
 
     p {
